--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <h3 class="title">Contact Info</h3>
 
                 <div class="info">
-                    <h3> <i class="fas fa-envelope"></i> sajalsman563@gmail.com </h3>
+                    <h3> <i class="fas fa-envelope"></i> jyoti.kiransales@gmail.com </h3>
 
                     <h3> <i class="fas fa-map-marker-alt"></i> Lucknow, Uttar Pradesh, india - 226001                        . </h3>
                 </div>
@@ -285,10 +285,10 @@
 
         </div>
         <div class="fot">      
-           <h3 class="fa fa-copyright"> copyright Dhammshil Maurya </h3>
-            <a href="https://www.instagram.com/ig_dsmaurya/" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/dhammshil-maurya" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="https://twitter.com/t_dsmaurya" target="_blank"><i class="fa fa-twitter"></i></a>
+           <h3 class="fa fa-copyright"> copyright Jyoti Sharma </h3>
+            <a href="https://www.instagram.com/jyotisharma4203/" target="_blank"><i class="fa fa-instagram"></i></a>
+       <!--     <a href="https://www.linkedin.com/in/dhammshil-maurya" target="_blank"><i class="fa fa-linkedin"></i></a> -->
+         <!--   <a href="https://twitter.com/t_dsmaurya" target="_blank"><i class="fa fa-twitter"></i></a> -->
 
 
         </div>
